# metaloot-mobile

./: bun.lockb  constants.ts  flow.config.ts  flow.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx
components/: interface.tsx  types.ts
components/ai/: IronMan.tsx  SpinningLoadingIcon.tsx  ThreeComponent.tsx  blueLady.tsx  mainMenu.tsx  playGroundRobot.tsx  robotEve.tsx
components/context/: UserContext.tsx
components/games/: ai-card.tsx  game-card.tsx  games-panel.tsx
components/inventory/: inventory-card.tsx  inventory-panel.tsx
components/swapverse/: swapCard.tsx  swapModal.tsx  swapPanel.tsx
components/transactions/: transactions-panel.tsx
components/ui/: navbar.tsx  sidebar.tsx
components/utilities/: metaLootClient.ts  metalootRoutes.ts  nftStorageCheck.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  routes.rs
