[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0.0"
tauri-plugin-deep-link = "2.0.0"




chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tokio = { version = "1.0", features = ["full"] } 
actix-web = "4.9.0"
once_cell = "1.20.2"
tauri-plugin-localhost = "2"
tauri-plugin-websocket = "2"
